Add priorityClassName support to Cube and Cubestore charts
- Add priorityClassName field to api and worker in cube chart
- Add priorityClassName field to router and workers in cubestore chart
- Update deployment/statefulset templates to use priorityClassName when set

Signed-off-by: Justin Fabricius <jfa@consensus.dk>

--- a/charts/cube/templates/worker/deployment.yaml
+++ b/charts/cube/templates/worker/deployment.yaml
@@ -31,6 +31,9 @@ spec:
       {{- toYaml .Values.commonAnnotations | nindent 8 }}
       {{- end }}
     spec:
+      {{- if .Values.worker.priorityClassName }}
+      priorityClassName: {{ .Values.worker.priorityClassName }}
+      {{- end }}
       {{- if .Values.securityContext.enabled }}
       securityContext:
         runAsUser: {{ .Values.securityContext.runAsUser }}
