--- a/charts/cubestore/templates/router/statefulset.yaml
+++ b/charts/cubestore/templates/router/statefulset.yaml
@@ -31,6 +31,9 @@ spec:
       {{- toYaml .Values.commonAnnotations | nindent 8 }}
       {{- end }}
     spec:
+      {{- if .Values.router.priorityClassName }}
+      priorityClassName: {{ .Values.router.priorityClassName }}
+      {{- end }}
       serviceAccountName: {{ template "cubestore.router.serviceAccountName" . }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
